
Remove unnecessary calls to ast_frdup from frame mixing routines.

Remove dtmf forwarding as this feature was required for video and video is no
longer supported.

Reuse asterisk frames used for speaker and listener mix buffers.

Reuse conference frames used for speaker and listener mix buffers.

Typedef conference control blocks, conference frame header and soundq header.

Remove unused silence detection defines and cleanup member control block
silence detection definitions.

Remove unnecessary last frame cache code from conference thread's get incoming
frame routine.

Added another library for silence detection. The new library is enabled by
setting the silence detection compiler flag, SILDET, to one. The new library is
the default setting and the old library is deprecated.

Added a scoreboard for member speaking/silent state changes.  The scoreboard is
enabled by setting a two compiler flags: SPEAKER_SCOREBOARD and
CACHE_CONTROL_BLOCKS.  Member speaking/silent state change events are not
queued to the manager when the scoreboard is enabled. By default,
speaking/silent events are enabled and the scoreboard is disabled.

Changed the incoming and outgoing frame queues to use ast_frames as the queue
item rather than conf_frames. The advantage of this is that it avoids
unecessary memory allocation in the frame queueing code.

Removed end_conference "hang_up" option because it doesn't work and because it
doesn't make sense to hang up the channel in the conference application.  Use
ast_soft_hangup to exit the application when a member is kicked from

Deprecate kick member, mute member, and unmute member because they're redundant
and less efficient than kick channel, mute channel, and unmute channel.

Deprecate the sound complete message because it isn't used in either the
manager or the web application.

Remove the support for managing each conference with its own thread since it
doesn't scale very well as each conference contends for resources.